--- a/Weitianshi/pages/message/pushProject/pushProject.wxss
+++ b/Weitianshi/pages/message/pushProject/pushProject.wxss
@@ -1,7 +1,9 @@
 /* pages/message/applyProject/applyProject.wxss */
-page{
+
+page {
   background: #f3f4f8;
 }
+
 .swiper-tab {
   width: 100%;
   text-align: center;
@@ -29,13 +31,15 @@ page{
 
 .empty {
   padding-top: 0;
-  margin-top:344rpx;
+  margin-top: 344rpx;
   width: 252rpx;
   height: 190rpx;
 }
-.hasNothing{
-  color:#666666;
+
+.hasNothing {
+  color: #666;
 }
+
 .browseMeTitle {
   /*height: 90rpx;*/
   margin: 32rpx 32rpx 32rpx 32rpx;
@@ -128,7 +132,7 @@ page{
 
 .allProjectDetail {
   font-size: 26rpx;
-  color:#999999;
+  color: #999;
   line-height: 26rpx;
   text-align: left;
   margin-bottom: 34rpx;
@@ -172,26 +176,41 @@ page{
 }
 
 .haveInterest {
-  position: absolute;
+  /* position: absolute; */
   color: #999;
-  right: 32rpx;
+  /* right: 32rpx; */
   white-space: nowrap;
   display: block;
+  padding: 0 32rpx;
+  margin: 20rpx 16rpx 0 16rpx;
+  height: 52rpx;
+  line-height: 52rpx;
+}
+.addedSuccess{
+    color: #999;
+  /* right: 32rpx; */
+  white-space: nowrap;
+  display: block;
+  padding: 0 32rpx;
+  margin: 20rpx 0 0 16rpx;
+  height: 52rpx;
+  line-height: 52rpx;
 }
 
 .btnHaveInterest, .btnNoInterest {
   font-size: 24rpx;
   color: #40587a;
-  border: 1px solid #40587A;
+  border: 1px solid #40587a;
   height: 52rpx;
   line-height: 52rpx;
   padding: 0 32rpx;
-  margin: 20rpx 24rpx 0 185rpx;
+  margin: 20rpx 16rpx 0 16rpx;
   border-radius: 4rpx;
 }
 
 .btnHaveInterest {
   margin: 20rpx 0 0 0;
+  padding: 0 8rpx;
 }
 
 #time {
@@ -216,7 +235,7 @@ page{
 /*=============================  */
 
 .applyMyProject {
-  padding: 32rpx ;
+  padding: 32rpx;
   background: white;
   border-radius: 4rpx;
 }
@@ -227,7 +246,7 @@ page{
 }
 
 #introduce {
-  background: #FAFAFA;
+  background: #fafafa;
   border-radius: 4rpx 4rpx 0 0;
   font-size: 26rpx;
   color: #666;
@@ -241,11 +260,12 @@ page{
   justify-content: space-between;
   width: 691rpx;
 }
-#introduce .introduce{
- background:  #FAFAFA;
+
+#introduce .introduce {
+  background: #fafafa;
   border-radius: 4rpx 4rpx 0 0;
   font-size: 26rpx;
-  color:#666666;
+  color: #666;
   line-height: 88rpx;
   text-align: left;
   height: 88rpx;
@@ -255,6 +275,7 @@ page{
   width: 670rpx;
   padding-left: 32rpx;
 }
+
 .applyMyProject .userPosition {
   font-size: 28rpx;
   color: #666;
@@ -361,7 +382,7 @@ page{
   height: 68rpx;
   position: absolute;
   right: -2rpx;
-  top:-2rpx;
+  top: -2rpx;
 }
 
 .userPic {
@@ -438,19 +459,19 @@ page{
   position: absolute;
   right: 32rpx;
   top: 32rpx;
-  color:#40587a;
-} 
+  color: #40587a;
+}
 
- .user_apply {
+.user_apply {
   width: 40rpx;
   height: 40rpx;
   display: block;
   margin-right: 16rpx;
   border-radius: 50%;
   font-size: 22rpx;
-  background:#f2f2f2;
+  background: #f2f2f2;
   line-height: 40rpx;
-} 
+}
 
 .investmentGroupContent, .roundGroupContent {
   white-space: nowrap;
@@ -472,22 +493,27 @@ page{
   color: #40587a;
   line-height: 88rpx;
   text-align: right;
-  padding-right:34rpx;
+  padding-right: 34rpx;
 }
-.noRead{
-  color:#cccccc;
+
+.noRead {
+  color: #ccc;
 }
-.statusNoInterest{
-  color: #999999;
+
+.statusNoInterest {
+  color: #999;
 }
+
 .readed {
   color: #40587a;
 }
+
 .projectDetailLight {
   padding: 0 16rpx;
   border-right: 1rpx solid #999;
   color: #40587a;
 }
+
 .projectDetailLine:first-child {
   padding-left: 0;
 }
@@ -507,10 +533,13 @@ page{
 .noLight {
   color: #999;
 }
+
 .hightLight {
   color: #40587a;
 }
+
 /*模态框  */
+
 .modalBox {
   background: rgba(0, 0, 0, 0.5);
   width: 100%;
@@ -519,6 +548,7 @@ page{
   left: 0;
   top: 0;
 }
+
 .contactModalBox {
   height: 616rpx;
   width: 534rpx;
@@ -528,49 +558,54 @@ page{
   padding: 40rpx 32rpx 32rpx 32rpx;
   position: relative;
 }
-.modalTitle{
-font-size:36rpx;
-color:#333333;
-line-height:36rpx;
-text-align:center;
+
+.modalTitle {
+  font-size: 36rpx;
+  color: #333;
+  line-height: 36rpx;
+  text-align: center;
 }
-.modalContent{
-border:1rpx solid #e6e6e6;
-/* width:504rpx; */
-height:258rpx;
-margin-top:32rpx;
-margin-bottom:24rpx;
-margin-right: 0;
-outline: none;
-padding-top:20rpx;
-padding-left:24rpx;
-font-size:28rpx;
-color:#999999;
-line-height:28rpx;
+
+.modalContent {
+  border: 1rpx solid #e6e6e6;
+  /* width:504rpx; */
+  height: 258rpx;
+  margin-top: 32rpx;
+  margin-bottom: 24rpx;
+  margin-right: 0;
+  outline: none;
+  padding-top: 20rpx;
+  padding-left: 24rpx;
+  font-size: 28rpx;
+  color: #999;
+  line-height: 28rpx;
 }
-.modalTips{
-font-size:28rpx;
-color:#666666;
-line-height:40rpx;
-text-align:center;
-padding:0 28rpx;
+
+.modalTips {
+  font-size: 28rpx;
+  color: #666;
+  line-height: 40rpx;
+  text-align: center;
+  padding: 0 28rpx;
 }
-.btn{
-background:#40587a;
-border-radius:6rpx;
-width:506rpx;
-height:88rpx;
-font-size:32rpx;
-color:#ffffff;
-line-height:88rpx;
-text-align:center;
-margin-top: 72rpx;
+
+.btn {
+  background: #40587a;
+  border-radius: 6rpx;
+  width: 506rpx;
+  height: 88rpx;
+  font-size: 32rpx;
+  color: #fff;
+  line-height: 88rpx;
+  text-align: center;
+  margin-top: 72rpx;
 }
-.close{
-  width:48rpx;
-  height:48rpx;
+
+.close {
+  width: 48rpx;
+  height: 48rpx;
   position: absolute;
-  top:185rpx;
-  right:67rpx;
+  top: 185rpx;
+  right: 67rpx;
   z-index: 99;
 }
