--- a/Weitianshi/pages/Template/Template.wxml
+++ b/Weitianshi/pages/Template/Template.wxml
@@ -946,7 +946,7 @@
         </view>
         <view class="t-classname" wx:if="{{type == 3}}"></view>
       </view>
-      <view class="t-time">{{item.created_at}}</view>
+      <view class="t-time">{{item.pro_time}}</view>
     </view>
   </block>
   <view class="t-highBox"></view>
