--- a/Weitianshi/pages/discoverProject/discoverProject.wxml
+++ b/Weitianshi/pages/discoverProject/discoverProject.wxml
@@ -15,7 +15,7 @@
     <swiper class='banner' autoplay='true' current='{{bannerIndex}}' interval='4000' duration='500' circular='true'>
       <block wx:for="{{imgUrls}}" wx:key='item'>
         <swiper-item>
-          <image src="{{item}}" class="slide-image" />
+          <image src="{{item}}" class="slide-image" data-index='{{index}}' bindtap='bannerLink' />
         </swiper-item>
       </block>
     </swiper>
