--- a/Weitianshi/pages/myProject/projectDetail/projectDetail.wxss
+++ b/Weitianshi/pages/myProject/projectDetail/projectDetail.wxss
@@ -1918,26 +1918,46 @@ scroll-view {
   border-top: 1rpx solid #e6e6e6;
   margin: 24rpx 0 28rpx 0;
 }
+
 /*移除和推送项目 按钮  */
 
-.btnContent{
-font-size:28rpx;
-color:#40587a;
-line-height:28rpx;
-text-align:left;
+.btnContent {
+  font-size: 28rpx;
+  color: #40587a;
+  line-height: 28rpx;
+  text-align: left;
 }
-.btnContent1{
-  padding-right:120rpx;
-  border-right:1rpx solid #e6e6e6;
+
+.btnContent1 {
+  padding-right: 120rpx;
+  border-right: 1rpx solid #e6e6e6;
 }
-.pushProject{
-  height:28rpx;
-  width:28rpx;
-  margin-right:18rpx;
+
+.pushProject {
+  height: 28rpx;
+  width: 28rpx;
+  margin-right: 18rpx;
 }
-.pushProject1{
-margin-left:90rpx;
+
+.pushProject1 {
+  margin-left: 90rpx;
 }
-.pushProject2{
-margin-left: 92rpx;
+
+.pushProject2 {
+  margin-left: 92rpx;
+}
+
+#matching {
+  font-size: 28rpx;
+  color: #333;
+  line-height: 28rpx;
+  text-align: left;
+  padding: 28rpx 0 32rpx 0;
+}
+
+.btnContented {
+  font-size: 28rpx;
+  color: #ccc;
+  line-height: 28rpx;
+  text-align: left;
 }
