--- a/Weitianshi/pages/message/contactProject/projectList/projectList.wxml
+++ b/Weitianshi/pages/message/contactProject/projectList/projectList.wxml
@@ -28,7 +28,7 @@
     <template is="allNumber" data="{{count:count,text:'约谈您的项目'}}"></template>
     <block wx:for="{{metList}}" wx:key="{{metList}}">
       <view class="t-outsideBox" data-id="{{item.user_id}}" catchtap="personDetail">
-      <view class="t-redPoint" wx:if="{{item.status == 0}}"></view>
+        <view class="t-redPoint" wx:if="{{item.status == 0}}"></view>
         <view class="t-applyMyProject t-contacts-detailm">
           <view class="t-introduceBox flex">
             <view class="t-userName">{{item.investor_name}}</view>
@@ -74,15 +74,23 @@
               <image src="/img/icon-tuisongxiangmu@2x.png" class="btnPic"></image>
               <view class="pushContent">推送项目</view>
             </view>
+            <view class="flex" catchtap="pushProject" data-id="{{item.user_id}}" data-investor="{{item.investor_id}}" wx:if="{{item.push_status == 0}}">
+              <image src="/img/icon-tuisongxiangmu@2x.png" class="pushProject pushProject1"></image>
+              <view class="btnContent">推送项目</view>
+            </view>
+            <view class="flex" wx:if="{{item.push_status == 1}}">
+              <image src="/img/icon-yituisong@2x.png" class="pushProject pushProject1"></image>
+              <view class="btnContented">已推送</view>
+            </view>
             <!-- <view class="flex addPerson" wx:if="{{item.is_connect == 0 || item.is_connect == 3}}">
               <image src="/img/icon-jiarenmai@2x.png" class="btnPic btnPic2"></image>
               <view class="classname">加人脉</view>
             </view> -->
-               <view class="flex addPerson" >
+            <view class="flex addPerson">
               <image src="/img/icon-daiyanzheng@2x.png" class="btnPic btnPic2 afterApply"></image>
               <view class="classname">待验证</view>
             </view>
-               <view class="flex addPerson" wx:if="{{item.is_connect == 1}}">
+            <view class="flex addPerson" wx:if="{{item.is_connect == 1}}">
               <image src="/img/icon-huweirenmai@2x.png" class="btnPic btnPic2"></image>
               <view class="classname">已为人脉</view>
             </view>
@@ -91,7 +99,7 @@
       </view>
       <view id="time">{{item.created_at}}</view>
     </block>
-    <template is="hasNothing"  data="{{emptyNumber:metList}}">></template>
+    <template is="hasNothing" data="{{emptyNumber:metList}}">></template>
   </view>
 </scroll-view>
 
