--- a/Weitianshi/pages/message/contactProject/projectList/projectList.wxss
+++ b/Weitianshi/pages/message/contactProject/projectList/projectList.wxss
@@ -54,7 +54,7 @@
 .t-applyMyProject {
   padding: 32rpx;
   background: #fafafa;
-  padding-bottom:0;
+  padding-bottom: 0;
 }
 
 .t-outsideBox {
@@ -238,7 +238,7 @@
   color: #999;
   line-height: 22rpx;
   text-align: left;
- padding-bottom: 24rpx; 
+  padding-bottom: 24rpx;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
@@ -253,7 +253,7 @@
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
-  margin-bottom:0;
+  margin-bottom: 0;
 }
 
 .t-bottomTabAfter {
@@ -285,12 +285,14 @@
 .btnPic {
   height: 28rpx;
   width: 28rpx;
-  margin-left:62rpx;
-  margin-right:16rpx;
+  margin-left: 62rpx;
+  margin-right: 16rpx;
 }
-.btnPic2{
-  margin-left:108rpx;
+
+.btnPic2 {
+  margin-left: 108rpx;
 }
+
 .pushProject, .addPerson {
   font-size: 28rpx;
   color: #40587a;
@@ -299,26 +301,29 @@
 .btnBox {
   background: #fafafa;
 }
-.pushContent{
-  padding-right:92rpx;
-  border-right:1rpx solid #e6e6e6;
+
+.pushContent {
+  padding-right: 92rpx;
+  border-right: 1rpx solid #e6e6e6;
 }
 
 .insideBox {
   height: 26rpx;
   margin: 0 32rpx;
-  padding:32rpx 0;
+  padding: 32rpx 0;
   border-top: 1rpx solid #e6e6e6;
 }
-#time{
+
+#time {
   font-size: 20rpx;
   color: #999;
   line-height: 20rpx;
   text-align: right;
   margin: 10rpx 32rpx 20rpx 0;
 }
-.afterApply{
-color:#cccccc;
+
+.afterApply {
+  color: #ccc;
 }
 
 .noData {
@@ -331,6 +336,7 @@ color:#cccccc;
 .hasNothing {
   color: #666;
 }
+
 .empty {
   width: 212rpx;
   height: 256rpx;
@@ -340,5 +346,14 @@ color:#cccccc;
   padding-top: 228rpx;
   justify-content: center;
   padding-left: 264rpx;
-  padding-bottom:354rpx;
+  padding-bottom: 354rpx;
+}
+
+.btnContented {
+  font-size: 28rpx;
+  color: #ccc;
+  line-height: 28rpx;
+  text-align: left;
+  padding-right: 119rpx;
+  border-right: 1rpx solid #e6e6e6;
 }
