--- a/Weitianshi/pages/matchInvestor/matchInvestor.wxss
+++ b/Weitianshi/pages/matchInvestor/matchInvestor.wxss
@@ -21,14 +21,16 @@ page {
   padding: 0 5%;
   text-align: center;
   line-height: 104rpx;
+  font-size: 32rpx;
+  color: #40587a;
 }
 
 .publicButton image {
-  width: 40rpx;
-  height: 40rpx;
+  width: 28rpx;
+  height: 28rpx;
   position: absolute;
-  left: 25%;
-  top: 25%;
+  left: 30%;
+  top: 36%;
 }
 
 .scroll {
@@ -41,24 +43,28 @@ page {
 .itemCard {
   background: white;
   margin-bottom: 24rpx;
-  padding: 36rpx 32rpx;
+  padding: 36rpx 22rpx;
 }
 
 .cardTop {
   font-size: 12px;
   color: #666;
-  padding: 24rpx 32rpx;
+  padding-bottom:20rpx;
   justify-content: space-between;
+  border-bottom: 1rpx solid #e6e6e6;
 }
 
 .cardTop .pushBtn {
-  width: 160rpx;
+  width: 136rpx;
   height: 52rpx;
   background: #40587a;
   color: white;
   font-size: 24rpx;
   line-height: 52rpx;
   margin: 0;
+  border-radius: 4px;
+  padding-left: 0;
+  padding-right:0;
 }
 
 .matchInvestor .investorItem {
@@ -90,22 +96,32 @@ page {
   text-align: center;
   margin-top: 8rpx;
 }
-.projectTop{
+
+.projectDetal {
+  background: #fafafa;
+  border-radius: 4px;
+  /* width:320px;
+height:81px; */
+}
+
+.projectTop {
   justify-content: space-between;
-  padding: 24rpx 40rpx;
+  padding: 24rpx 24rpx;
   margin-top: 28rpx;
 }
+
 .projectTop .is_exclusive {
   border: 2rpx solid #40587a;
   border-radius: 4rpx;
   width: 46rpx;
   height: 28rpx;
-  color:  #40587a;
+  color: #40587a;
   font-size: 18rpx;
   line-height: 28rpx;
   text-align: center;
 }
-.projectTop .projectIntro{
+
+.projectTop .projectIntro {
   font-size: 26rpx;
   color: #333;
   width: 518rpx;
@@ -113,36 +129,49 @@ page {
   white-space: nowrap;
   text-overflow: ellipsis;
 }
-.industryArr, .otherTag{
+
+.industryArr, .otherTag {
   font-size: 24rpx;
   color: #666;
-  padding: 10rpx 40rpx;
+  padding: 10rpx 24rpx;
 }
+
+.otherTag {
+  padding: 24rpx 24rpx;
+}
+
+.publishTag {
+  justify-content: space-between;
+}
+
 .publish {
   border-radius: 4rpx;
   width: 46rpx;
   height: 28rpx;
-  color:  #40587a;
+  color: #40587a;
   font-size: 18rpx;
   line-height: 28rpx;
-  text-align: center;
-  float: right;
+  /* text-align: center; *//* float: right; */
+  text-align: right;
+  margin-top: 20rpx;
+  margin-right: 24rpx;
 }
 
 .ProjectDetailInfo {
-  border-top: 1rpx solid #ccc;
+  /* border-top: 1rpx solid #ccc; */
   background: #fff;
   width: 100%;
   height: 28rpx;
   padding-top: 38rpx;
   color: #ccc;
 }
-.ProjectDetailInfo .viewTimeNew{
+
+.ProjectDetailInfo .viewTimeNew {
   position: absolute;
   color: #f44c4c;
   top: -12rpx;
   right: 25rpx;
-  font-size:18rpx;
+  font-size: 18rpx;
 }
 
 .sceenPerson, .applyPerson, .investPerson {
@@ -157,10 +186,21 @@ page {
   justify-content: center;
   align-items: center;
 }
-.sceenPerson:last-child{
-  border:none;
+
+.sceenPerson:last-child {
+  border: none;
 }
 
 .screenPersonColor {
   color: #999;
+}
+
+.applyProjectNew {
+  font-size: 18rpx;
+  color: #f44c4c;
+  line-height: 18rpx;
+  position: absolute;
+  left: 170rpx;
+  top: -16rpx;
+  text-align: center;
 }
