--- a/Weitianshi/pages/discoverProject/discoverProject.wxss
+++ b/Weitianshi/pages/discoverProject/discoverProject.wxss
@@ -59,3 +59,23 @@
   height: 24rpx;
   margin-right: 12rpx;
 }
+
+/*人脉王浮标  */
+.competitor {
+  position: fixed;
+  bottom: 132rpx;
+  right: 0;
+  background: #fff;
+  border: 0 solid #e0e6ed;
+  box-shadow: 0 0 2px 0 rgba(64, 88, 122, 0.10);
+  width: 166rpx;
+  height: 33px;
+  font-family: MicrosoftYaHei;
+  font-size: 28rpx;
+  color: #40587a;
+  letter-spacing: 0;
+  line-height: 66rpx;
+  text-align: right;
+  border-radius: 35rpx 0 0 35rpx;
+  padding-right: 28rpx;
+}
