--- a/Weitianshi/pages/register/personInfo/personInfo.wxml
+++ b/Weitianshi/pages/register/personInfo/personInfo.wxml
@@ -1,22 +1,23 @@
 <view id="personInfo">
-    <form>
-        <view class="flex title">为了获得更精准的匹配,请完善信息</view>
-        <view id="name" class="flex">
-            <input placeholder="您的姓名" maxlength="40" value="{{name}}" bindblur="stripscript" />
-        </view>
-        <view id="telephone" class="flex">
-            <input placeholder="手机号" type="number" bindinput="checkPhone" bindconfirm="checkPhone" value="{{telphone}}" />
-        </view>
-        <view id="checkCode" class="flex">
-            <input placeholder="验证码" type="number" value="{{checkCode}}" bindinput="checkCode2" />
-            <button class="clear {{time=='1'?'clearOn':''}}" bindtap="checkCode" disabled="{{time==1}}" loading="{{checking==1}}">{{getCode}}</button>
-        </view>
-        <view>
-            <button open-type='getPhoneNumber' class="nextBtn" bindgetphonenumber="getPhoneNumber" loading="{{loading=='1'}}">微信授权绑定</button>
-            <button form-type="submit" class="nextBtn complete-phone-binding" bindtap="nextPage" loading="{{loading=='1'}}">下一步</button>
-        </view>
-    </form>
+  <form>
+    <view class="flex title">为了获得更精准的匹配,请完善信息</view>
+    <view id="name" class="flex">
+      <input placeholder="您的姓名" maxlength="40" value="{{name}}" bindblur="stripscript" />
+    </view>
+    <view id="telephone" class="flex">
+      <input class='telephoneText' placeholder="手机号" type="number" bindinput="checkPhone" bindconfirm="checkPhone" value="{{telphone}}" />
+      <span class='or'>或</span>
+      <button open-type='getPhoneNumber' class="WXbind" bindgetphonenumber="getPhoneNumber" loading="{{loading=='1'}}" >微信授权绑定</button>
+    </view>
+    <view id="checkCode" class="flex">
+      <input placeholder="验证码" type="number" value="{{checkCode}}" bindinput="checkCode2" />
+      <button class="clear {{time=='1'?'clearOn':''}}" bindtap="checkCode" disabled="{{time==1}}" loading="{{checking==1}}">{{getCode}}</button>
+    </view>
+    <view>
+      <button form-type="submit" class="nextBtn complete-phone-binding" bindtap="nextPage" loading="{{loading=='1'}}">下一步</button>
+    </view>
+  </form>
 
-    <!--错误提示-->
-    <view class="error" wx:if="{{error=='1'}}">{{error_text}}</view>
+  <!--错误提示-->
+  <view class="error" wx:if="{{error=='1'}}">{{error_text}}</view>
 </view>
