--- a/Weitianshi/pages/matchInvestor/matchInvestor.wxml
+++ b/Weitianshi/pages/matchInvestor/matchInvestor.wxml
@@ -65,6 +65,11 @@
         </view>
       </view>
     </block>
+    <!--内容为空的时候的样式  -->
+    <view class="emptyStyle" wx:if="{{!myProject}}">
+      <view class="hasNothing">暂无数据，发布融资项目，可匹配投资人</view>
+      <image src="{{imgUrls}}"></image>
+    </view>
   </scroll-view>
   <!--创建项目引导  -->
   <template is='createProject'></template>
