--- a/Weitianshi/pages/matchInvestor/matchInvestor.wxss
+++ b/Weitianshi/pages/matchInvestor/matchInvestor.wxss
@@ -49,7 +49,7 @@ page {
 .cardTop {
   font-size: 12px;
   color: #666;
-  padding-bottom:20rpx;
+  padding-bottom: 20rpx;
   justify-content: space-between;
   border-bottom: 1rpx solid #e6e6e6;
 }
@@ -64,7 +64,7 @@ page {
   margin: 0;
   border-radius: 4px;
   padding-left: 0;
-  padding-right:0;
+  padding-right: 0;
 }
 
 .matchInvestor .investorItem {
@@ -203,4 +203,22 @@ height:81px; */
   left: 170rpx;
   top: -16rpx;
   text-align: center;
+}
+
+/*为空的时候的样式  */
+.emptyStyle{
+    text-align: center;
+}
+.emptyStyle image {
+  width: 438rpx;
+  height: 370rpx;
+}
+
+.hasNothing {
+  font-size: 30rpx;
+  color: #666;
+  line-height: 30rpx;
+  text-align: center;
+  margin-bottom: 40rpx;
+  margin-top: 210rpx;
 }
