--- a/Weitianshi/pages/my/myNew/myNew.wxss
+++ b/Weitianshi/pages/my/myNew/myNew.wxss
@@ -136,7 +136,7 @@ page {
   padding: 32rpx 0;
 }
 
-.user_popularity view:first-child, .user_attention view:first-child,
+ .user_attention view:first-child,
 .user_potential view:first-child {
   font-size: 28rpx;
   color: #666;
@@ -144,7 +144,13 @@ page {
   flex: column;
   /*justify-content: center;*/
 }
-
+.user_popularity .popularity-Num{
+    font-size: 36rpx;
+  color: #333;
+  line-height: 36rpx;
+  text-align: center;
+  margin-bottom: 16rpx;
+}
 .user_potential {
   margin-right: 0;
 }
