--- a/Weitianshi/pages/projectDetail/projectDetail.wxml
+++ b/Weitianshi/pages/projectDetail/projectDetail.wxml
@@ -51,9 +51,9 @@
           <image src="/img/img-star.png" class="titlePic"></image>
           <view class="title star">{{pro_goodness[0].goodness_title}}</view>
         </view>
-        <view class="brightContent" class="{{isChecked?'brightContent':'brightContentAfter'}}" value="{{number}}" wx:if="{{project.pro_goodness}}">{{pro_goodness[0].goodness_title}}</view>
-        <label class="more" bindtap="allBrightPoint" wx:if="{{isChecked == true&& textBeyond1}}">全部</label>
-        <label class="more" bindtap="noBrightPoint" wx:if="{{isChecked == false&& textBeyond1}}">收起</label>
+        <view class="brightContent" class="{{isChecked0?'brightContent':'brightContentAfter'}}" value="{{number}}" wx:if="{{project.pro_goodness}}">{{pro_goodness[0].goodness_title}}</view>
+        <label class="more" bindtap="allBrightPoint" wx:if="{{isChecked0 == true&& textBeyond0}}">全部</label>
+        <label class="more" bindtap="noBrightPoint" wx:if="{{isChecked0== false&& textBeyond0}}">收起</label>
       </view>
     </view>
     <!--三个tab页  -->
