--- a/Weitianshi/utils/threeTab.wxml
+++ b/Weitianshi/utils/threeTab.wxml
@@ -17,11 +17,11 @@
                 <image src="/img/img-star.png" class="titlePic"></image>
                 <view class="title star">{{pro_goodness[0].goodness_title}}</view>
               </view>
-              <view class="{{isChecked?'brightContent':'brightContentAfter'}}" value="{{number}}">
+              <view class="{{isChecked0?'brightContent':'brightContentAfter'}}" value="{{number}}">
                 {{pro_goodness[0].goodness_desc}}
               </view>
-              <label class="more" bindtap="allBrightPoint" wx:if="{{isChecked == true && textBeyond0}}"  data-check="{{0}}">全部</label>
-              <label class="more" bindtap="noBrightPoint" wx:if="{{isChecked == false && textBeyond0}}"  data-check="{{0}}">收起</label>
+              <label class="more" bindtap="allBrightPoint" wx:if="{{isChecked0 == true && textBeyond0}}" data-check="{{0}}">全部</label>
+              <label class="more" bindtap="noBrightPoint" wx:if="{{isChecked0== false && textBeyond0}}" data-check="{{0}}">收起</label>
             </view>
             <!--项目资料-->
             <view class="material" style="position:relative;" wx:if="{{project.pro_BP.length != 0|| project.pro_name != ''||project.pro_company_name != ''||project.pro_status != ''||project.pro_company_scale !=''||project.pro_website != ''||project.contact.user_name !=''||project.contact.user_mobile !=''}}">
@@ -71,11 +71,11 @@
                 <image src="/img/icon-shichanggaikuang@2x.png" class="titlePic"></image>
                 <view class="title star">{{pro_goodness[1].goodness_title}}</view>
               </view>
-              <view class="{{isChecked?'brightContent':'brightContentAfter'}}" value="{{number}}">
+              <view class="{{isChecked1?'brightContent':'brightContentAfter'}}" value="{{number}}">
                 {{pro_goodness[1].goodness_desc}}
               </view>
-               <label class="more" bindtap="allBrightPoint" wx:if="{{isChecked == true && textBeyond1}}" data-check="{{1}}">全部</label>
-              <label class="more" bindtap="noBrightPoint" wx:if="{{isChecked == false && textBeyond1}}">收起</label> 
+              <label class="more" bindtap="allBrightPoint" wx:if="{{isChecked1 == true && textBeyond1}}" data-check="{{1}}">全部</label>
+              <label class="more" bindtap="noBrightPoint" wx:if="{{isChecked1 == false && textBeyond1}}" data-check="{{1}}">收起</label>
             </view>
             <!--产品概况-->
             <view class="brightPoint" wx:if="{{pro_goodness[2].goodness_desc}}">
@@ -83,11 +83,11 @@
                 <image src="/img/icon-chanpingaikuang@2x.png" class="titlePic"></image>
                 <view class="title star">{{pro_goodness[2].goodness_title}}</view>
               </view>
-              <view class="{{isChecked?'brightContent':'brightContentAfter'}}" value="{{number}}">
+              <view class="{{isChecked2?'brightContent':'brightContentAfter'}}" value="{{number}}">
                 {{pro_goodness[2].goodness_desc}}
               </view>
-               <label class="more" bindtap="allBrightPoint" wx:if="{{isChecked == true && textBeyond2}}"  data-check="{{2}}">全部</label>
-              <label class="more" bindtap="noBrightPoint" wx:if="{{isChecked == false && textBeyond2}}"  data-check="{{2}}">收起</label> 
+              <label class="more" bindtap="allBrightPoint" wx:if="{{isChecked2 == true && textBeyond2}}" data-check="{{2}}">全部</label>
+              <label class="more" bindtap="noBrightPoint" wx:if="{{isChecked2 == false && textBeyond2}}" data-check="{{2}}">收起</label>
             </view>
             <!--商业模式-->
             <view class="brightPoint" wx:if="{{pro_goodness[3].goodness_desc}}">
@@ -95,11 +95,11 @@
                 <image src="/img/icon-shangyemoshi@2x.png" class="titlePic"></image>
                 <view class="title star">{{pro_goodness[3].goodness_title}}</view>
               </view>
-              <view class="{{isChecked?'brightContent':'brightContentAfter'}}" value="{{number}}">
+              <view class="{{isChecked3?'brightContent':'brightContentAfter'}}" value="{{number}}">
                 {{pro_goodness[3].goodness_desc}}
               </view>
-               <label class="more" bindtap="allBrightPoint" wx:if="{{isChecked == true && textBeyond3}}"  data-check="{{3}}">全部</label>
-              <label class="more" bindtap="noBrightPoint" wx:if="{{isChecked == false && textBeyond3}}"  data-check="{{3}}">收起</label> 
+              <label class="more" bindtap="allBrightPoint" wx:if="{{isChecked3 == true && textBeyond3}}" data-check="{{3}}">全部</label>
+              <label class="more" bindtap="noBrightPoint" wx:if="{{isChecked3 == false && textBeyond3}}" data-check="{{3}}">收起</label>
             </view>
             <!--产品  -->
             <view class="brightPoint" wx:if="{{brandList.length != 0}}">
@@ -193,7 +193,9 @@
                 </view>
                 <view class="purpose" wx:if="{{project.pro_finance_use}}">
                   <view class="purposeTitle">资金用途</view>
-                  <view class="purposeContent">{{project.pro_finance_use}}</view>
+                  <view class="purposeContent"  class="{{isChecked4?'brightContent':'brightContentAfter'}}" >{{project.pro_finance_use}}</view>
+                  <label class="more" bindtap="allBrightPoint" wx:if="{{isChecked4 == true && textBeyond4}}" data-check="{{4}}">全部</label>
+                  <label class="more" bindtap="noBrightPoint" wx:if="{{isChecked4== false && textBeyond4}}" data-check="{{4}}">收起</label>
                 </view>
                 <view class="investBox" wx:if="{{pro_history_financeList}}">
                   <view class="invest" wx:for="{{pro_history_financeList}}" wx:if="{{index<2||moreInfoList == 3}}" wx:key="{{index}}">
