--- a/Weitianshi/pages/register/personInfo/personInfo.wxml
+++ b/Weitianshi/pages/register/personInfo/personInfo.wxml
@@ -1,6 +1,6 @@
 <view id="personInfo">
   <form>
-    <view class="flex title">为了获得更精准的匹配,请完善信息</view>
+    <view class="flex title">手机号是投资人/项目方联系您的重要线索</view>
     <view id="name" class="flex">
       <input placeholder="您的姓名" maxlength="40" value="{{name}}" bindblur="stripscript" />
     </view>
